style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;
}
.header{
    min-height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url("./images/banner.jpg");
    background-position: center;
    background-size: cover;
    position: relative;
}
nav{
    display: flex;
    padding: 2%, 6%;
    justify-content: space-between;
    align-items: center;
}
nav img{
    width: 100px;
}
.nav-links{
    flex: 1;
    text-align: right;
}
.nav-links ul li{
    list-style: none;
    display: inline-block;
    padding: 8px 12px;
    position: relative;
}
.nav-links ul li a{
    color: #fff;
    text-decoration: none;
    font-size: 13px;
}
.nav-links ul li::after{
    content: '';
    width: 0%;
    height: 2px;
    background: #f6e58d;
    display: block;
    margin: auto;
    transition: 0.5s;
}
.nav-links ul li:hover::after{
    width: 100%;
}
.text-box{
    width: 90%;
    color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    text-align: center;
}
.text-box h1{
    font-size: 48px;
}
.text-box p{
    margin: 10px 0 40px;
    font-size: 24px;
    color: #fff;
}
.hero-btn{
    display: inline-block;
    text-decoration: none;
    color: #fff;
    border: 1px solid #fff;
    padding: 12px 34px;
    font-size: 13px;
    background: transparent;
    position: relative;
    cursor: pointer;
}
.hero-btn:hover{
    border: 1px solid #f6e58d;
    background: #f6e58d;
    transition: 1s;
}
.yellow-btn {
    border: 1px solid #f6e58d;
    background: transparent;
    color: #f6e58d;
}
.yellow-btn:hover {
    color: #fff;
}
nav .fa{
    display: none;
}

@media(max-width: 850px){
    .text-box h1{
        font-size: 20px;
    }
    .nav-links ul li{
        display: block;
    }
    .nav-links{
        position: fixed;
        background: #f6e58d;
        height: 100vh;
        width: 200px;
        top: 0;
        right: -200px;
        text-align: left;
        z-index: 2;
        transition: 1s;
    }
    nav .fa{
        display: block;
        color: #fff;
        margin: 10px;
        font-size: 22px;
        cursor: pointer;
    }
    .nav-links ul{
        padding: 30px;
    }
}

/*----- content -----*/

.content{
    width: 80%;
    margin: auto;
    text-align: center;
    padding-top: 50px;
}
.content h3{
    font-size: 24px;
    font-weight: 600;
}

p{
    color: #2c3e50;
    font-size: 16px;
    line-height: 22px;
    padding: 10px;
}

.row{
    margin-top: 5%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
.content-col{
    flex-basis: 45%;
    background: #dff9fb;
    border-radius: 10px;
    margin-bottom: 5%;
    padding: 20px 0px;
    box-sizing: border-box;
}

/*----- examples -----*/
.examples{
    width: 80%;
    margin: auto;
    text-align: center;
    padding-top: 50px;
    position: relative;
}

.examples-col{
    flex-basis: 20%;
    border-radius: 10px;
    margin-bottom: 30px;
    position: relative;
    overflow: hidden;
    box-shadow: 0px 0px 20px rgba(0,0,0,0.2);

}

.examples-col img{
    width: 100%;
    display: block;

}
.layer{
    background: transparent;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    transition: 0.5s;
}
.layer:hover{
    background: #dff9fb80;

}
.layer h3{
    width: 100%;
    font-weight: 500;
    color: #fff;
    font-size: 26px;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
}

/*-----testimonials-----*/

.testimonials{
    width: 80%;
    margin: auto;
    padding-top: 50px;
    text-align: center;
}

.testimonials-row{
    margin-top: 5%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
.testimonials-col{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-basis: 46%;
    border-radius: 10px;
    margin-bottom: 30px;
    position: relative;
    overflow: hidden;
    box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
    min-height: 800px;
}

.testimonials h3,
.testimonials p {
    padding: 10px;
    margin: 0;
    flex-shrink: 0;
}
/*-----carousel-----*/
.carousel{
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    -webkit-overflow-scrolling: touch;
    scroll-behavior: smooth;
    scroll-snap-type: x mandatory;
    scroll-padding: 0 16px;
    margin: auto;
}

.carousel-tracker-container {
    width: 100%;
    height: 100%;
    position: absolute;
    display: flex;
    margin: 0;
    overflow: hidden;
  }

.carousel-track{
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
    position: relative;
    transition: transform 3000ms ease-in-out;

}

.carousel-slide{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
    
}
.carousel-slide-current-slide {
    width: 100%;
    height: 100%;
    z-index: 1;
}

.carousel-slide img{
    width: 100%;
    height: 100%;
    border-radius: 0;
    object-fit: cover !important;
}

.carousel-button-left,
.carousel-button-right{
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background: transparent;
    border: 0;
    cursor: pointer;
    width: 35px;
    height: 35px;

}
.carousel-button i.fa{
    font-size: 28px;
    cursor: pointer;
}
.carousel-button-left {
    left: 0px;
    background-color: rgba(234,217,134, 0.4);
    z-index: 6;
}
  
.carousel-button-right {
    right: 0px;
    background-color: rgba(234,217,134, 0.4);
    z-index: 5;
}

.carousel-nav{
    display: flex;
    justify-content: center;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 10px, 0;
}
.carousel-indicator,
.carousel-indicator-current-slide {
    border: none;
    background-color: rgba(0, 0, 0, 0.2);
    height: 15px;
    width: 15px;
    margin: 0 8px;
    padding: 0;
    cursor: pointer;
}

.carousel-indicator:hover,
.carousel-indicator-current-slide:hover {
  background-color: rgba(0, 0, 0, 0.5);
}

.carousel-indicator-current-slide {
  background-color: #f6e58d;
}

/*-----cta------*/
.cta{
    margin: 100px auto;
    width: 80%;
    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url("./images/contactbanner.jpg");
    background-position: center;
    background-size: cover;
    border-radius: 10px;
    text-align: center;
    padding: 100px 0;
}

.cta h1{
    color: #fff;
    margin-bottom: 40px;
    padding: 0;
}

@media(max-width:700px){
    .cta h1{
        font-size: 24px;
    }
}

/*-----footer-----*/

.footer {
    width: 100%;
    text-align: center;
    padding: 30px 0;
}
.footer h4{
    margin-bottom: 20px;
}
.footer-column {
    width:33.33%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}
  
.footer-row {
    display: flex;
    flex-direction: row;
    margin-bottom: 10px;
}

.footer-text {
    margin: 0;
    display: inline-block;
}
  
/* -----------painting and decorating page------------- */

.sub-header{
    height: 50vh;
    width: 100%;
    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(images/banner.jpg);
    background-position: center;
    background-size: cover;
    text-align: center;
    color: #fff;
}

.sub-header h1{
    margin-top: 75px;
}

.painting-and-decorating{
    width: 80%;
    margin: auto;
    padding-top: 80px;
    padding-bottom: 80px;
}
.painting-and-decorating-col{
    flex-basis: 46%;
    padding: 30px 2px;
}

.painting-and-decorating img {
    width: 100%;
}

.painting-and-decorating-col h1 {
    padding-top: 0;

}
.painting-and-decorating-col p {
    padding: 15px 0 25px;
}

/* ---------contact us page---------- */
.location {
    width: 80%;
    margin: auto;
    padding: 80px 0;
}
.location iframe {
    width: 100%;
}
.contact-us {
    width: 80%;
    margin: auto;
}
.contact-col {
    flex-basis: 46%;
    margin-bottom: 30px;
}
.contact-col div {
    display: flex;
    align-items: center;
    margin-bottom: 40px;
}
.contact-col div .fa {
    font-size: 28px;
    color: #f6e58d;
    margin: 10px;
    margin-right: 10px;
}
.contact-col div p {
    padding: 0;
}
.contact-col div h5 {
    font-size: 18px;
    margin-bottom: 5px;
    color: #2c3e50;
    font-weight: 400;
}
.contact-col input, .contact-col textarea {
    width: 100%;
    padding: 15px;
    margin-bottom: 17px;
    outline: none;
    border: 1px solid #f6e58d;
    box-sizing: border-box;
    resize: none;
}

